adding cname file

--- a/_layouts/classic.html
+++ b/_layouts/classic.html
@@ -4,9 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<script type="text/javascript"
+	  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	</script>
 
-	<title>Zenna Tavares</title>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8">
+
 	<style type="text/css" media="screen">
 
 		h1.fontface {font: 60px/68px 'LatinModernRoman10Regular', Arial, sans-serif;letter-spacing: 0;}
@@ -59,9 +62,9 @@
 			font-style:italic;
 		}
 
-		span {
+		/*span {
 			display:none;
-		}
+		}*/
 
 		body {
 			font: 62.5% palatino, "times new roman", serif;
